# BPI-A64-Android8

./: README.md
android/: .gitignore
android/bootable/recovery/: recovery.cpp  roots.cpp
android/bootable/recovery/etc/: init.rc
android/bootable/recovery/updater/: install.cpp
android/device/softwinner/: .gitignore
android/frameworks/av/media/libcedarc/openmax/vdec/: Android.mk  Makefile.am  omxMM.h  omx_deinterlace.h  omx_vdec.cpp  omx_vdec.h  omx_vdec_newDisplay.cpp  omx_vdec_newDisplay.h
android/frameworks/av/media/libcedarc/openmax/venc/: Android.mk  Makefile.am  omx_venc.cpp  omx_venc.h
android/frameworks/base/: Android.mk
android/hardware/aw/: Android.mk
android/hardware/aw/gpu/: README  (+2 more)
android/hardware/interfaces/: current.txt
android/prebuilts/checkstyle/: default-treewalker-checks.xml
android/prebuilts/ndk/: Android.bp  cpufeatures.bp  current  gen_blueprints.py  stl.bp  update.py
android/prebuilts/qemu-kernel/: OWNERS  update_emu_kernels.sh
android/prebuilts/sdk/: Android.mk  update_current.py
android/system/vold/: Android.mk  Disk.cpp  Loop.cpp  PublicVolume.cpp  VolumeManager.cpp
android/test/vts/: OWNERS
android/tools/loganalysis/: OWNERS
lichee/: .gitignore  build.sh
lichee/bootloader/uboot_2014_sunxi_spl/: .gitignore
lichee/brandy/: .config  build.sh
lichee/brandy/u-boot-2011.09/: Makefile
lichee/brandy/u-boot-2014.07/: .gitignore  Makefile
lichee/buildroot/: .gitignore
lichee/buildroot/configs/: sun3iw1p1_defconfig  sun6i_defconfig  sun8i_defconfig  sun8iw10p1_defconfig  sun8iw11p1_defconfig  sun9i_defconfig
lichee/buildroot/dl/: autoconf-2.69.tar.bz2  m4-1.4.17.tar.bz2
lichee/buildroot/package/: Config.in
lichee/buildroot/scripts/: build.sh  mkcmd.sh  mkrule
lichee/linux-4.9/: .gitignore
lichee/linux-4.9/drivers/: Makefile
lichee/linux-4.9/fs/: buffer.c
lichee/linux-4.9/kernel/: sysctl.c
lichee/linux-4.9/lib/: Kconfig.debug
lichee/linux-4.9/mm/: page_alloc.c  slab.c  slab.h  slub.c
lichee/linux-4.9/scripts/: build.sh
lichee/tools/pack/: createkeys  pack
(+30817 files in other folders)
